infra/k8s/overlays/prod/dusk/dawn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dawn
  labels:
    app.kubernetes.io/name: dawn
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  tls:
    - hosts: [dawn-host]
      secretName: dawn-ingress-tls
  rules:
    - host: dawn-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dawn
                port:
                  name: https
